--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,71 +547,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'accuracy_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/nr/728kg3p15rx909xr1v3xp0kh0000gn/T/ipykernel_2816/2371078778.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Print the balanced_accuracy score of the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'accuracy_score' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Print the balanced_accuracy score of the model\n",
-    "balanced_accuracy_score(y_test, X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[18663,   102],\n",
-       "       [   56,   563]])"
+       "0.9520479254722232"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Generate a confusion matrix for the model\n",
-    "testing_matrix = confusion_matrix(y_train, testing_predictions)\n",
-    "print(testing_matrix)"
+    "# Print the balanced_accuracy score of the model\n",
+    "balanced_accuracy_score(y_test, testing_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "[[18663   102]\n",
+      " [   56   563]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a confusion matrix for the model\n",
+    "testing_matrix = confusion_matrix(y_test, testing_predictions)\n",
+    "print(testing_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      0.99      0.91      1.00      0.95      0.91     18765\n",
-      "          1       0.85      0.91      0.99      0.88      0.95      0.90       619\n",
+      "           0       1.00      0.99      1.00     18765\n",
+      "           1       0.85      0.91      0.88       619\n",
       "\n",
-      "avg / total       0.99      0.99      0.91      0.99      0.95      0.91     19384\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.92      0.95      0.94     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "testing_report = classification_report(y_test, testing_predictions)"
+    "# Import the module\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "testing_report = classification_report(y_test, testing_predictions)\n",
+    "print(testing_report)"
    ]
   },
   {
@@ -653,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,33 +664,34 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_oversampler = RandomOverSampler(random_state=1)\n",
+    "\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_resampled, y_resampled = random_oversampler.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    56271\n",
        "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled.value_counts()"
    ]
   },
   {
@@ -700,19 +703,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "model.fit(X_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -730,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -739,19 +742,19 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -761,19 +764,19 @@
        "       [    4,   615]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +795,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
